ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 100ms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.vinga.tk
    http:
      paths:
      - backend:
          serviceName: kibana-kibana
          servicePort: 5601
        path: /
  - host: ms-prod.vinga.tk
    http:
      paths:
      - backend:
          serviceName: ms-ms-app-service-prod 
          servicePort: 80
        path: /
  - host: ms-stage.vinga.tk
    http:
      paths:
      - backend:
          serviceName: ms-ms-app-service-stage
          servicePort: 80
        path: /
  - host: prometheus.vinga.tk
    http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 80
        path: /
  - host: grafana.vinga.tk
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
